# kang

./: CMakeLists.txt  Example_map.yaml  Isaacsim_occupancymap_create.md  README.md  Ros2_bridge_env.md  git_push.md  github_collaborator.md  run_docker.sh  test.txt
Isaac-sim_ros2/: Isaac-sim_lab_hang_solution.md  Isaacsim_occupancymap_create.md
src/: astar_planning_node.cpp  backup.cpp  goal_sub_node.cpp  init_sub_node.cpp  map_sub_node.cpp  test.cpp
src/a_star_package/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/a_star_package/include/: astar_planner.h  astar_planner_ros.h
src/a_star_package/launch/: map_load_launch.py
src/a_star_package/maps/: maze.yaml
src/a_star_package/src/: astar_planner.cpp  astar_planner_ros.cpp  astar_planning_node.cpp
